# test-packaging

./: README.md  build.pipeline.yml  pyproject.toml
.github/workflows/: publish.yml
greetings_folder/: __init__.py
v1-basic-setuppy/: setup.py
v1-basic-setuppy/greetings_folder/: greetings.py
v1-basic-setuppy/my_package.egg-info/: PKG-INFO  SOURCES.txt
v1-basic-toml/: test.py
