[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GreetingsProject"
version = "0.0.1"
dependencies = []
requires-python = ">=3.11"
authors = [
  {name = "Thomas Vidori", email = "thomas.vidori@protonmail.com"},
]
readme = "README.md"

#.venv\Scripts\python.exe -m build